k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inu-backyard-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt

spec:
  tls:
    - hosts:
        - <HOST>
      secretName: inu-backend-ingress-cert
  rules:
    - host: <HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inu-backyard-service
                port:
                  number: 3001
